--- a/composer.json
+++ b/composer.json
@@ -16,19 +16,22 @@
         }
     ],
     "require": {
-        "illuminate/support": "~5.0",
-        "illuminate/session": "~5.0",
-        "illuminate/database": "~5.0",
-        "php" : ">=5.4.0"
+        "illuminate/support": "^5.2",
+        "illuminate/session": "^5.2",
+        "illuminate/database": "^5.2",
+        "php" : ">=5.5.9"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0",
-        "orchestra/testbench": "3.0.*"
+        "mockery/mockery": "^0.9.4"
     },
     "autoload": {
         "psr-4": {
             "Kim\\": "src/Kim"
         }
+    },
+    "autoload-dev": {
+        "classmap": ["tests"]
     },
     "minimum-stability": "stable"
 }
